<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.clarin.cmdi</groupId>
    <artifactId>vcr</artifactId>
    <version>1.9.0-SNAPSHOT</version>
    <name>VCR</name>
    <packaging>pom</packaging>

     <licenses>
        <license>
            <name>GNU General Public License Version 3 (GPLv3)</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>
    
    <organization>
        <name>CLARIN</name>
        <url>http://www.clarin.eu/</url>
    </organization>
        
    <developers>
        <developer>
            <name>Oliver Schonefeld</name>
            <organization>Institut für Deutsche Sprache</organization>
            <url>http://www.ids-mannheim.de/</url>
        </developer>
        <developer>
            <name>Twan Goosen</name>
            <organization>CLARIN</organization>
            <url>http://www.clarin.eu/</url>
        </developer>
        <developer>
            <name>Willem Elbers</name>
            <organization>CLARIN</organization>
            <url>http://www.clarin.eu/</url>
        </developer>
    </developers>
    
    <modules>
        <module>model</module>
        <module>core</module>
        <module>serialization</module>
        <module>rest</module>
        <module>oai</module>
        <module>frontend</module>
        <!--module>orig</module-->
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <slf4j.version>1.7.35</slf4j.version>
        <log4j.version>2.17.1</log4j.version>
        <hibernate.version>5.6.5.Final</hibernate.version>
        <hibernate.jpaVersion>5.6.5.Final</hibernate.jpaVersion>
        <jersey.version>2.35</jersey.version><!--3.0.3-->
        <jersey-spring4.version>2.35</jersey-spring4.version><!--3.0.0-M6-->
        <jackson.version>2.13.1</jackson.version>
        <wicket.version>7.12.0</wicket.version> <!-- 7.7.0 has issue https://issues.apache.org/jira/browse/WICKET-6374, which will befixed in 7.8.0 -->
        <wicket-bootstrap.version>2.0.8</wicket-bootstrap.version>
        <spring.version>4.3.30.RELEASE</spring.version>
        <!--<spring.version>5.3.15</spring.version>-->
        <swagger.version>2.1.12</swagger.version>
        
        <!-- Tell Netbeans to insert the right license header -->
        <netbeans.hint.license>gpl30</netbeans.hint.license> 
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        
         <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
            <version>2.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <reporting>
        <plugins>
            <!-- NCSS plugin has issues with Java 7 at the moment, check back later -->
            <!--
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javancss-maven-plugin</artifactId>
                <version>2.0-beta-2</version>
            </plugin>
            -->
        </plugins>
    </reporting>

    <repositories>
        <!--
        <repository>
            <id>wiquery</id>
            <name>wiQuery repository</name>
            <url>http://wiquery.googlecode.com/svn/repo/</url>
            <layout>default</layout>
        </repository>
        -->
        <repository>
            <id>CLARIN central proxy</id>
            <name>CLARIN Repository</name>
            <url>https://nexus.clarin.eu/repository/central/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
                
        <repository>
            <id>clarin</id>
            <name>CLARIN Repository</name>
            <url>https://nexus.clarin.eu/repository/Clarin/</url>
            <layout>default</layout>
        </repository>        
    </repositories>
    
</project>
